// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Remove mount point on unmount 1`] = `
<body
  style="overflow: hidden;"
>
  <div />
</body>
`;

exports[`Render closed modal with just a content element 1`] = `
.c0 {
  box-sizing: border-box;
  position: fixed;
  width: 100vw;
  height: 100vh;
  z-index: 1000;
  left: 0;
  top: 0;
  overflow: scroll;
  background-color: var(--pbl-theme-colors-blackOpacity-600);
  display: flex;
  justify-content: center;
  align-items: center;
  transition: opacity 0.3s;
  pointer-events: none;
  opacity: 0;
}

.c1 {
  box-sizing: border-box;
  transform: translateY(60px);
  transition: transform 0.3s;
  max-width: 780px;
  margin: auto;
  min-height: min-content;
  padding: 24px;
}

.c2 {
  box-sizing: border-box;
  border-radius: 12px;
  background-color: var(--pbl-theme-colors-background);
  padding: 12px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

<body
  style="overflow: auto;"
>
  <div />
  <div
    data-testid="pbl-modal-mountpoint"
  >
    <div
      class="c0"
      data-testid="pbl-modal-backdrop"
    >
      <div
        class="c1"
        data-testid="pbl-modal-area"
        maxwidth="medium"
      >
        <div
          aria-modal="true"
          class="c2"
          data-testid="pbl-modal-box"
        >
          <div>
            Hello World
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Render with additional panes 1`] = `
.c0 {
  box-sizing: border-box;
  transition: transform 0.3s;
  max-width: 780px;
  margin: auto;
  min-height: min-content;
  padding: 24px;
}

.c1 {
  box-sizing: border-box;
  border-radius: 12px;
  background-color: var(--pbl-theme-colors-background);
  padding: 12px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

.c2 {
  box-sizing: border-box;
  margin-top: 12px;
}

<div
  class="c0"
  data-testid="pbl-modal-area"
  maxwidth="medium"
  open=""
>
  <div
    aria-modal="true"
    class="c1"
    data-testid="pbl-modal-box"
  >
    <div>
      Hello World
    </div>
  </div>
  <div
    class="c2"
    data-testid="pbl-modal-pane"
  >
    <div
      class="c1"
      data-testid="pbl-modal-pane-box"
    >
      <div>
        Pane 1
      </div>
    </div>
  </div>
  <div
    class="c2"
    data-testid="pbl-modal-pane"
  >
    <div
      class="c1"
      data-testid="pbl-modal-pane-box"
    >
      <div>
        Pane 2
      </div>
    </div>
  </div>
  <div
    class="c2"
    data-testid="pbl-modal-pane"
  >
    <div
      class="c1"
      data-testid="pbl-modal-pane-box"
    >
      <div>
        Pane 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Render with title 1`] = `
.c1 {
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
}

.c2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-title-fontSize);
  line-height: var(--pbl-theme-typography-title-lineHeight);
  margin-bottom: var(--pbl-theme-typography-title-marginBottom);
}

.c0 {
  box-sizing: border-box;
  border-radius: 12px;
  background-color: var(--pbl-theme-colors-background);
  padding: 12px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

<div
  aria-modal="true"
  class="c0"
  data-testid="pbl-modal-box"
>
  <div
    class="c1"
    data-testid="pbl-modal-title-box"
    justifycontent="space-between"
  >
    <h3
      class="c2"
    >
      Hans 
      <strong>
        Wurst
      </strong>
    </h3>
  </div>
  <div>
    Hello World
  </div>
</div>
`;

exports[`Render with title and topRightItem 1`] = `
.c1 {
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
}

.c2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-title-fontSize);
  line-height: var(--pbl-theme-typography-title-lineHeight);
  margin-bottom: var(--pbl-theme-typography-title-marginBottom);
}

.c0 {
  box-sizing: border-box;
  border-radius: 12px;
  background-color: var(--pbl-theme-colors-background);
  padding: 12px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

<div
  aria-modal="true"
  class="c0"
  data-testid="pbl-modal-box"
>
  <div
    class="c1"
    data-testid="pbl-modal-title-box"
    justifycontent="space-between"
  >
    <h3
      class="c2"
    >
      Hans 
      <strong>
        Wurst
      </strong>
    </h3>
    <div>
      something
    </div>
  </div>
  <div>
    Hello World
  </div>
</div>
`;

exports[`Render with topRightItem 1`] = `
.c1 {
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
}

.c0 {
  box-sizing: border-box;
  border-radius: 12px;
  background-color: var(--pbl-theme-colors-background);
  padding: 12px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

<div
  aria-modal="true"
  class="c0"
  data-testid="pbl-modal-box"
>
  <div
    class="c1"
    data-testid="pbl-modal-title-box"
    justifycontent="space-between"
  >
    <div>
      something
    </div>
  </div>
  <div>
    Hello World
  </div>
</div>
`;
